# FDTD

./: ABC.cpp  ABC.h  CMakeLists.txt  Grid.cpp  Grid.h  alloc.h  macro.h  main.cpp  oneDimensionFdtd.cpp  oneDimensionFdtd.h  parallelFdtd.cpp  parallelFdtd.h  serialFdtd.cpp  serialFdtd.h  show.py  update.cpp
data/: show.py  sim.0  sim.10  sim.100  sim.110  sim.120  sim.130  sim.140  sim.150  sim.160  sim.170  sim.180  sim.190  sim.20  sim.200  sim.210  sim.220  sim.230  sim.240  sim.250  sim.260  sim.270  sim.280  sim.290  sim.30  sim.40  sim.50  sim.60  sim.70  sim.80  sim.90
src/: Grid.cpp  Grid.h  abc.cpp  alloc.h  ezinc.h  iterator.cpp  macro.h  main.cpp  snapshot.cpp
